# ChangeLog for net-p2p/zuul
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header $

  15 Dec 2003; Stuart Herbert <stuart@gentoo.org> zuul-1.2.0.ebuild:
  Fix for bug #32636

  08 Dec 2003; Don Seiler <rizzo@gentoo.org>; zuul-1.2.0.ebuild:
  Changing chown usage to use colon

*zuul-1.2.0 (18 Nov 2003)

  18 Nov 2003; Don Seiler <rizzo@gentoo.org>; zuul-1.2.0.ebuild:
  Version bump

*zuul-1.1.2 (01 Oct 2003)

  01 Oct 2003; Heinrich Wendel <lanius@gentoo.org> zuul-1.1.2.ebuild:
  version bump, some cosmetic changes

*zuul-1.0.0 (16 Jul 2003)

  16 Jul 2003; Don Seiler <rizzo@gentoo.org>; zuul-1.0.0.ebuild:
  Initial import.  Submitted by me
