@@ -1,8 +1,8 @@
-MD5 07942936b14ce221c70c5c407366ffdf zuul-1.0.0.ebuild 1431
-MD5 b43b1f23e5a7c7f9087dd625a7154d03 zuul-1.1.2.ebuild 1436
-MD5 679425abad59e19814a8351e8dc25b3a ChangeLog 685
+MD5 5ae9d653bb6f0997f7e5eda8762eb80a ChangeLog 869
+MD5 f49fecee748a03e067a9e93d8ca44524 zuul-1.0.0.ebuild 1425
+MD5 e774f24b0fc6e1812b69c848aa0d85b3 zuul-1.1.2.ebuild 1432
 MD5 b55e7bc8fa0de44dffb6301e159ff8fc metadata.xml 534
-MD5 c05921d05305d329a9dd07507bb77582 zuul-1.2.0.ebuild 1151
+MD5 2adbfeda076f404b59936327f93b49fe zuul-1.2.0.ebuild 1148
 MD5 79aebd3adca669a7baa793ff03748417 files/digest-zuul-1.0.0 61
 MD5 cd4f98be101a25b70d78c04ce72d6981 files/digest-zuul-1.1.2 61
 MD5 2837a795228b1fb9c93ff14fb82191f7 files/digest-zuul-1.2.0 61
