@@ -1,6 +1,6 @@
-# Copyright 1999-2003 Gentoo Technologies, Inc.
+# Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-p2p/cvs-repo/gentoo-x86/net-p2p/zuul/Attic/zuul-1.1.2.ebuild,v 1.1 2003/10/01 13:06:58 lanius Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-p2p/cvs-repo/gentoo-x86/net-p2p/zuul/Attic/zuul-1.1.2.ebuild,v 1.2 2004/02/23 13:05:17 mr_bones_ Exp $
 
 HOSTNAME=`hostname`
 DESCRIPTION="Zuul is yet another PHP front-end for mldonkey. It will allow full access to all the features of mldonkey including starting/viewing downloads, viewing uploads, viewing servers, and setting all the options."
@@ -13,7 +13,7 @@ SRC_URI="mirror://sourceforge/zuul/${PN}-${MY_PV}.tar.gz"
 SLOT="0"
 
 LICENSE="GPL-2"
-KEYWORDS="~x86 ~ppc ~sparc ~alpha"
+KEYWORDS="~x86 ~ppc ~alpha"
 IUSE=""
 RDEPEND="virtual/php
 		>=net-p2p/mldonkey-2.5"
